Prevent timeline logos from being huge on mobile

--- a/reberhardt/assets/sass/partials/_timeline.scss
+++ b/reberhardt/assets/sass/partials/_timeline.scss
@@ -136,6 +136,7 @@
 			margin-right: 2em;
 			padding-top: 0;
 			width: $img-width;
+			max-width: $img-width;
 
 			@include breakpoint($mobile) {
 				width: 80%;
